added countdown and began simulation logic

--- a/index.html
+++ b/index.html
@@ -12,10 +12,17 @@
     <div>
         <h1 class='title'>IMERSE</h1>
         <h3>Interpersonal Micro-Expression Recognition Self-training Engine</h3>
-        <button class='clicker'>Click Me</button>
+        <!-- <button class='clicker'>Click Me</button> -->
     </div>
 
     <div class='face-image'>
+        <div class='display'>
+            <button class='beg'>Beginner</button>
+            <button class='int'>Intermediate</button>
+            <button class='exp'>Expert</button>
+            <div class='timer'></div>
+            <img class='sim-img' src="">
+        </div>
         <p>------</p>
         <p>buttons offering 3 or four difficulty settings will be here.  clicking one begins a countdown to the first image appearing</p>
         <p>the images will be displayed here</p>
@@ -25,7 +32,7 @@
     </div>
     
     <div class='instructions'>
-        <p>Choose a difficulty: Slow, Medium or Fast.</p>
+        <p>Choose a difficulty: Beginner, Intermediate, Expert.</p>
         <p>You will be shown 7 facial expressions.</p>
         <p>The 7 possible expressions are: Neutral, Happiness, Sadness, Anger, Disgust, Fear, Surprise</p>
         <p>The amount of time the expression is shown will depend on the difficulty you chose.</p>
