basic beginner simulation functional

--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <title>JS Issue Tracker</title>
     <script src='main.js' defer></script>
     <script src='info_btns.js' defer></script>
+    <link rel="stylesheet" href="simulation.css">
 </head>
 
 <body>
     <div>
         <h1 class='title'>IMERSE</h1>
         <h3>Interpersonal Micro-Expression Recognition Self-training Engine</h3>
-        <!-- <button class='clicker'>Click Me</button> -->
     </div>
 
     <div class='face-image'>
@@ -22,6 +22,15 @@
             <button class='exp'>Expert</button>
             <div class='timer'></div>
             <img class='sim-img' src="">
+            <div class='sim-btns-hide sim-btns'>
+                <button class='neutral-sim-btn'>Neutral</button>
+                <button class='happiness-sim-btn'>Happiness</button>
+                <button class='sadness-sim-btn'>Sadness</button>
+                <button class='anger-sim-btn'>Anger</button>
+                <button class='disgust-sim-btn'>Disgust</button>
+                <button class='surprise-sim-btn'>Surprise</button>
+                <button class='fear-sim-btn'>Fear</button>
+            </div>
         </div>
         <p>------</p>
         <p>buttons offering 3 or four difficulty settings will be here.  clicking one begins a countdown to the first image appearing</p>
