implemented all simulations and simulation resets

--- a/index.html
+++ b/index.html
@@ -17,12 +17,14 @@
 
     <div class='face-image'>
         <div class='display'>
-            <button class='beg'>Beginner</button>
-            <button class='int'>Intermediate</button>
-            <button class='exp'>Expert</button>
+            <div class='diff-btns'>
+                <button class='beg'>Beginner</button>
+                <button class='int'>Intermediate</button>
+                <button class='exp'>Expert</button>
+            </div>
             <div class='timer'></div>
             <img class='sim-img' src="">
-            <div class='sim-btns-hide sim-btns'>
+            <div class='hidden sim-btns'>
                 <button class='neutral-sim-btn'>Neutral</button>
                 <button class='happiness-sim-btn'>Happiness</button>
                 <button class='sadness-sim-btn'>Sadness</button>
@@ -31,13 +33,8 @@
                 <button class='surprise-sim-btn'>Surprise</button>
                 <button class='fear-sim-btn'>Fear</button>
             </div>
+            <div class='answers'></div>
         </div>
-        <p>------</p>
-        <p>buttons offering 3 or four difficulty settings will be here.  clicking one begins a countdown to the first image appearing</p>
-        <p>the images will be displayed here</p>
-        <p>after an image appears, buttons will appear asking user to guess the expression</p>
-        <p>a countdown beings displaying time until next image appears</p>
-        <p>------</p>
     </div>
     
     <div class='instructions'>
