added new difficulty and fixed some bugs and removed unneeded code

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>IMERSE</title>
     <!-- <link rel="stylesheet" href="tabs_and_graph.css"> -->
     <link rel="stylesheet" href="simulation.css">
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <script src='main.js' defer></script>
     <script src='image_selection.js' defer></script>
     <script src='info_btns.js' defer></script>
@@ -15,107 +16,123 @@
 </head>
 
 <body>
-    <div class='title-div'>
-        <h1 class='title-one'>Interpersonal Micro-Expression</h1>
-        <img src="./imerse_logo.png" class='logo'>
-        <h1 class='title-two'>Recognition Self-training Engine</h1>
-    </div>
-
-    <div class='modal-btn-div'>
-        <button id='modalBtn' class='green'>Instructions</button>
-    </div>
-
-    <div id='modalDiv' class='modal'>
-        <div class='modal-content'>
-            <span class="close">&times;</span>
-            <h2 class='modal-inst-1'>First, choose a difficulty</h2>
-            <h2 class='modal-inst-2'>Watch closely for a micro-expression</h2>
-            <h2 class='modal-inst-3'>Click on the emotion you saw</h2>
-            <br>
-            <div class='inst-details'>
-                <h4>Further details</h3>
-                <p>Beginner: Images are shown for 3 seconds</p>
-                <p>Intermediate: Images are shown for 1 seconds</p>
-                <p>Expert: Images are shown for 0.5 seconds</p>
-                <p>Master: Images are shown for 3 seconds.  Four image sets are mixed together.</p>
-                <br>
-                <p>You will be shown 7 facial expressions (28 for Master difficulty).</p>
-                <p>The 7 possible expressions are: Neutral, Happiness, Sadness, Anger, Disgust, Fear, Surprise.</p>
-                <p>As you complete sets, you can check your overall stats below.  Keep in mind these stats will be lost when the page is refreshed.</p>
+    <div id='wrap'>
+        <div id='main'>
+            <div class='title-div'>
+                <h1 class='title-one'>Interpersonal Micro-Expression</h1>
+                <img src="./imerse_logo.png" class='logo'>
+                <h1 class='title-two'>Recognition Self-training Engine</h1>
             </div>
-            <br>
-            <p class='disclaimer'>Learning to read micro-expressions bears with it a certain responsibility, and the ethics of learning to read
-                emotions someone may not want to show you should be seriously considered. IMERSE is intended to be used by those
-                who have difficulty with interpersonal relationships due to an impaired ability (for any reason) to understand
-                social cues based on the emotional reactions of those around them. You can read more about the ethics of
-                learning this skill from Dr. Paul Ekman <a
-                    href='https://www.paulekman.com/blog/dangers-reading-micro-expressions/'>on his site here</a>.</p>
-        </div>
-    </div>
 
-    <div class='main-container'>
+            <!-- <div class='modal-btn-div'>
+                <button id='modalBtn' class='green'>Instructions</button>
+            </div> -->
 
-        <div class='face-image'>
-            <div class='display'>
-                <div class='diff-btns'>
-                    <button class='beg green'>Beginner</button>
-                    <button class='int blue'>Intermediate</button>
-                    <button class='exp green'>Expert</button>
-                    <button class='mas blue'>Master</button>
-                </div>
-                <div class='timer'></div>
-                <img class='sim-img' src="">
-                <div class='hidden sim-btns'>
-                    <button class='neutral-sim-btn green'>Neutral</button>
-                    <button class='happiness-sim-btn blue'>Happiness</button>
-                    <button class='sadness-sim-btn green'>Sadness</button>
-                    <button class='anger-sim-btn blue'>Anger</button>
-                    <button class='disgust-sim-btn green'>Disgust</button>
-                    <button class='surprise-sim-btn blue'>Surprise</button>
-                    <button class='fear-sim-btn green'>Fear</button>
-                </div>
-                <div>
-                    <div class='answers'></div>
+            <div id='modalDiv' class='modal'>
+                <div class='modal-content'>
+                    <span class="close">&times;</span>
+                    <h2 class='modal-inst-1'>First, choose a difficulty</h2>
+                    <h2 class='modal-inst-2'>Watch closely for a micro-expression</h2>
+                    <h2 class='modal-inst-3'>Click on the emotion you saw</h2>
+                    <br>
+                    <div class='inst-details'>
+                        <h4>Further details</h3>
+                        <p>Beginner: Images are shown for 3 seconds</p>
+                        <p>Intermediate: Images are shown for 1 seconds</p>
+                        <p>Expert: Images are shown for 0.5 seconds</p>
+                        <p>Master: Images are shown for 3 seconds.  Four image sets are mixed together.</p>
+                        <br>
+                        <p>You will be shown 7 facial expressions (28 for Master difficulty).</p>
+                        <p>The 7 possible expressions are: Neutral, Happiness, Sadness, Anger, Disgust, Fear, Surprise.</p>
+                        <p>As you complete sets, you can check your overall stats below.  Keep in mind these stats will be lost when the page is refreshed.</p>
+                    </div>
+                    <br>
+                    <p class='disclaimer'>Learning to read micro-expressions bears with it a certain responsibility, and the ethics of learning to read
+                        emotions someone may not want to show you should be seriously considered. IMERSE is intended to be used by those
+                        who have difficulty with interpersonal relationships due to an impaired ability (for any reason) to understand
+                        social cues based on the emotional reactions of those around them. You can read more about the ethics of
+                        learning this skill from Dr. Paul Ekman <a
+                            href='https://www.paulekman.com/blog/dangers-reading-micro-expressions/'>on his site here</a>.</p>
                 </div>
             </div>
-        </div>           
-    </div>
 
-    <div class='extra-info'>
-        <div class='graphs'>
-            <h2 class='graph-title'>Your Stats For This Session</h2>
-            <div class='tab'>
-                <button class='tablinks green' onclick="openGraph(event, 'Beginner')">Beginner Stats</button>
-                <button class='tablinks blue' onclick="openGraph(event, 'Intermediate')">Intermediate Stats</button>
-                <button class='tablinks green' onclick="openGraph(event, 'Expert')">Expert Stats</button>
-                <button class='tablinks blue' onclick="openGraph(event, 'Master')">Master Stats</button>
+            <div class='main-container'>
+
+                <div class='face-image'>
+                    <div class='display'>
+                        <div class='eyes-only-blocker hidden'></div>
+                        <div class='diff-btns'>
+                            <button id='modalBtn' class='blue'>Instructions</button>
+                            <button class='beg green'>Beginner</button>
+                            <button class='int blue'>Intermediate</button>
+                            <button class='exp green'>Expert</button>
+                            <button class='mas blue'>Master</button>
+                            <button class='eye green'>Eyes</button>
+                        </div>
+                        <div class='timer'></div>
+                        <img class='sim-img' src="">
+                        <div class='hidden sim-btns'>
+                            <button class='neutral-sim-btn green'>Neutral</button>
+                            <button class='happiness-sim-btn blue'>Happiness</button>
+                            <button class='sadness-sim-btn green'>Sadness</button>
+                            <button class='anger-sim-btn blue'>Anger</button>
+                            <button class='disgust-sim-btn green'>Disgust</button>
+                            <button class='surprise-sim-btn blue'>Surprise</button>
+                            <button class='fear-sim-btn green'>Fear</button>
+                        </div>
+                        <div>
+                            <div class='answers'></div>
+                        </div>
+                    </div>
+                </div>           
             </div>
-            <div id='Beginner' class='tabcontent'>
-                <div id='beg-res-graph'></div>
-            </div>
-            <div id='Intermediate' class='tabcontent'>
-                <div id='int-res-graph'></div>
-            </div>
-            <div id='Expert' class='tabcontent'>
-                <div id='exp-res-graph'></div>
-            </div>
-            <div id='Master' class='tabcontent'>
-                <div id='mas-res-graph'></div>
+
+            <div class='extra-info'>
+                <div class='graphs'>
+                    <h2 class='graph-title'>Your Stats For This Session</h2>
+                    <div class='tab'>
+                        <button class='tablinks green' onclick="openGraph(event, 'Beginner')">Beginner Stats</button>
+                        <button class='tablinks blue' onclick="openGraph(event, 'Intermediate')">Intermediate Stats</button>
+                        <button class='tablinks green' onclick="openGraph(event, 'Expert')">Expert Stats</button>
+                        <button class='tablinks blue' onclick="openGraph(event, 'Master')">Master Stats</button>
+                        <button class='tablinks green' onclick="openGraph(event, 'Eyes')">Eyes-Only Stats</button>
+                    </div>
+                    <div id='Beginner' class='tabcontent'>
+                        <div id='beg-res-graph'></div>
+                    </div>
+                    <div id='Intermediate' class='tabcontent'>
+                        <div id='int-res-graph'></div>
+                    </div>
+                    <div id='Expert' class='tabcontent'>
+                        <div id='exp-res-graph'></div>
+                    </div>
+                    <div id='Master' class='tabcontent'>
+                        <div id='mas-res-graph'></div>
+                    </div>
+                    <div id='Eyes' class='tabcontent'>
+                        <div id='eye-res-graph'></div>
+                    </div>
+                </div>
+                
+                <div class='info-buttons'>
+                    <h2 class='info-title'>Additional Information</h2>
+                    <button class='general green'>General</button>
+                    <button class='happiness blue'>Happiness</button>
+                    <button class='sadness green'>Sadness</button>
+                    <button class='anger blue'>Anger</button>
+                    <button class='disgust green'>Disgust</button>
+                    <button class='fear blue'>Fear</button>
+                    <button class='surprise green'>Surprise</button>
+                    <p class='info-box'></p>
+                    <!-- <p>Expression descriptions from <a href='https://www.scienceofpeople.com/microexpressions'>Science of People</a>.</p> -->
+                </div>
             </div>
         </div>
-        
-        <div class='info-buttons'>
-            <h2 class='info-title'>Additional Information</h2>
-            <button class='general green'>General</button>
-            <button class='happiness blue'>Happiness</button>
-            <button class='sadness green'>Sadness</button>
-            <button class='anger blue'>Anger</button>
-            <button class='disgust green'>Disgust</button>
-            <button class='fear blue'>Fear</button>
-            <button class='surprise green'>Surprise</button>
-            <p class='info-box'></p>
-            <!-- <p>Expression descriptions from <a href='https://www.scienceofpeople.com/microexpressions'>Science of People</a>.</p> -->
-        </div>
+    </div>
+    <div class='footer'>
+        <p>ALEC KEELER</p>
+        <a href="https://www.linkedin.com/in/alec-keeler-a8499083/"><i className="fab fa-linkedin fa-lg"></i>LinkedIn</a>
+        <a href="https://github.com/Alec-Keeler"><i className="fab fa-github fa-lg"></i></i>GitHub</a>
     </div>
 </body>
 
